--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab+Highlight&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab+Highlight:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -51,9 +54,6 @@
             Know My
             Sign</button></span>
       </div>
-      <!-- <div class="col margin-top-300 margin-bottom-600">
-
-      </div> -->
     </div>
 
     <div class="row hidden view" data-view="birthday-form">
@@ -112,6 +112,72 @@
 
     </div>
 
+    <div class="container container-small hidden view" data-view="sign-selection" id="sign-selection">
+      <div class="row d-flex text-center g-0">
+
+        <div class="col">
+          <button class="btn sign-button" value="Aries"><img class="scope-sign" src="images/Aries.png">
+            <span class="d-flex justify-content-center align-items-end">ARIES</span>
+          </button>
+        </div>
+        <div class="col">
+          <button class="btn sign-button" value="Taurus"><img class="scope-sign" src="images/Taurus.png">
+            <span class="d-flex justify-content-center align-items-end">TAURUS</span>
+          </button>
+        </div>
+        <div class="col">
+          <button class="btn sign-button" value="Gemini"><img class="scope-sign" src="images/Gemini.png">
+            <span class="d-flex justify-content-center align-items-end">GEMINI</span>
+          </button>
+        </div>
+        <div class="col">
+          <button class="btn sign-button" value="Cancer"><img class="scope-sign" src="images/Cancer.png">
+            <span class="d-flex justify-content-center align-items-end">CANCER</span>
+          </button>
+        </div>
+        <div class="col">
+          <button class="btn sign-button" value="Leo"><img class="scope-sign" src="images/Leo.png">
+            <span class="d-flex justify-content-center align-items-end">LEO</span>
+          </button>
+        </div>
+        <div class="col">
+          <button class="btn sign-button" value="Virgo"><img class="scope-sign" src="images/Virgo.png">
+            <span class="d-flex justify-content-center align-items-end">VIRGO</span>
+          </button>
+        </div>
+        <div class="col">
+          <button class="btn sign-button" value="Libra"><img class="scope-sign" src="images/Libra.png">
+            <span class="d-flex justify-content-center align-items-end">LIBRA</span>
+          </button>
+        </div>
+        <div class="col">
+          <button class="btn sign-button" value="Scorpio"><img class="scope-sign" src="images/Scorpio.png">
+            <span class="d-flex justify-content-center align-items-end">SCORPIO</span>
+          </button>
+        </div>
+        <div class="col">
+          <button class="btn sign-button" value="Sagittarius"><img class="scope-sign" src="images/Sagittarius.png">
+            <span class="d-flex justify-content-center align-items-end">SAGITTARIUS</span>
+          </button>
+        </div>
+        <div class="col">
+          <button class="btn sign-button" value="Capricorn"><img class="scope-sign" src="images/Capricorn.png">
+            <span class="d-flex justify-content-center align-items-end">CAPRICORN</span>
+          </button>
+        </div>
+        <div class="col">
+          <button class="btn sign-button" value="Aquarius"><img class="scope-sign" src="images/Aquarius.png">
+            <span class="d-flex justify-content-center align-items-end">AQUARIUS</span>
+          </button>
+        </div>
+        <div class="col">
+          <button class="btn sign-button" value="Pisces"><img class="scope-sign" src="images/Pisces.png">
+            <span class="d-flex justify-content-center align-items-end">PISCES</span>
+          </button>
+        </div>
+
+      </div>
+    </div>
 
 
 
