--- a/index.html
+++ b/index.html
@@ -181,103 +181,70 @@
       </div>
     </div>
 
-    <div class="row view" data-view="data-page">
-      <div class="col">
-        <canvas id="myChart" class="chart-design"></canvas>
-      </div>
-      <div class="row">
+    <div class="container container-small view" data-view="data-page">
 
-        <div class="col-6">Colors</div>
+      <div class="row view" data-view="data-page">
+        <div class="col">
+          <canvas id="myChart" class="chart-design"></canvas>
+        </div>
 
-        <div class="col-6">
-          <table class="table table-hover pink-bubble  table-sm">
-            <thead class="">
-              <tr>
-                <th scope="col" class="table-headers">Sign</th>
-                <th scope="col" class="table-headers d-flex data-table-title border-bottom-0">data
-                  <div class="dropdown">
-                    <button class="btn blue-bubble" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      <i class="fas fa-bars"></i>
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Colors</a></li>
-                      <li><a class="dropdown-item" href="#">Compatibility</a></li>
-                      <li><a class="dropdown-item" href="#">Lucky Numbers</a></li>
-                      <li><a class="dropdown-item" href="#">Moods</a></li>
-                    </ul>
-                  </div>
-                </th>
-              </tr>
-            </thead>
-            <tbody class="table-group-divider">
-              <tr>
-                <th scope="row">Aquarius</th>
-                <td id="aquarius-data"></td>
-              </tr>
-              <tr>
-                <th scope="row">Pisces</th>
-                <td id="pisces-data"></td>
-              </tr>
-              <tr>
-                <th scope="row">Aries</th>
-                <td id="aries-data"></td>
-              </tr>
-              <tr>
-                <th scope="row">Taurus</th>
-                <td id="taurus-data"></td>
-              </tr>
-              <tr>
-                <th scope="row">Gemini</th>
-                <td id="gemini-data"></td>
-              </tr>
-              <tr>
-                <th scope="row">Cancer</th>
-                <td id="cancer-data"></td>
-              </tr>
-              <tr>
-                <th scope="row">Leo</th>
-                <td id="leo-data"></td>
-              </tr>
-              <tr>
-                <th scope="row">Virgo</th>
-                <td id="virgo-data"></td>
-              </tr>
-              <tr>
-                <th scope="row">Libra</th>
-                <td id="libra-data"></td>
-              </tr>
-              <tr>
-                <th scope="row">Scorpio</th>
-                <td id="scorpio-data"></td>
-              </tr>
-              <tr>
-                <th scope="row">Sagittarius</th>
-                <td id="sagittarius-data"></td>
-              </tr>
-              <tr>
-                <th scope="row" class="border-bottom-0">Capricorn</th>
-                <td class="border-bottom-0"></td>
-              </tr>
+        <div class="row justify-content-center">
 
-            </tbody>
-          </table>
+          <div class="col-6">
+            <div class="row justify-content-center d-flex">
+              <div class="col"></div>
+              <h2 class="d-flex">Colors</h2>
+            </div>
+            <div class="row row-cols-4 pink-bubble data-colors-container justify-content-center">
+            </div>
+          </div>
+
+
+          <div class="col-6">
+            <table class="table table-hover pink-bubble  table-sm">
+              <thead class="">
+                <tr>
+                  <th scope="col" class="table-headers">Sign</th>
+                  <th scope="col" class="table-headers d-flex data-table-title border-bottom-0">data
+                    <div class="dropdown">
+                      <button class="btn blue-bubble" type="button" data-bs-toggle="dropdown" aria-expanded="false"
+                        id="dropdown-burger" data-toggle="dropdown">
+                        <i class="fas fa-bars"></i>
+                      </button>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item colors-burger" href="#">Colors</a></li>
+                        <li><a class="dropdown-item compatibility-burger" href="#">Compatibility</a></li>
+                        <li><a class="dropdown-item lucky-numbers-burger" href="#">Lucky Numbers</a></li>
+                        <li><a class="dropdown-item moods-burger" href="#">Moods</a></li>
+                      </ul>
+                    </div>
+                  </th>
+                </tr>
+              </thead>
+              <tbody class="table-group-divider">
+
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
+  </div>
 
 
-    <script src="js/data.js"></script>
-    <script src="js/main.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/main.js"></script>
 
 
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/c811705c3c.js" crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/c811705c3c.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
