--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="container-fluid">
         <div class="row justify-content-end"></div>
         <a class="navbar-brand" href="#" id="logo">
-          <img src="/images/astrolonerd_logo.png" alt="Bootstrap" width="36" height="34">
+          <img src="./images/astrolonerd_logo.png" alt="Bootstrap" width="36" height="34">
         </a>
         <a href="#" class="nav-top-right-text">ASTROLONERD</a>
       </div>
